some css changes, fixed footer overlap issue, added some content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,22 @@
 body {
     font-family: "Helvetica";
+    display: flex;
+    flex-direction: column;
+    background-color: #C0DFC7;
 }
 
 html,
 body {
     height: 100%;
-    margin: 0;
 }
 
 .wrapper {
-    min-height: 100%;
-    margin-bottom: -50px;
-    background-color: #C0DFC7;
+    flex: 1 0 auto;
+    width: 100%;
+    margin-bottom: 50px;
 }
 
-.footer {
-    height: 10%;
-}
+
 
 .tablink {
     background-color: #7DDF92;
@@ -28,8 +28,9 @@ body {
     width: 25%;
     text-align: center;
     transition: all 0.5s;
-    font-size: 16px;
+    font-size: 14px;
     padding: 5px;
+    line-height: 20px;
 }
 
 .tablink span {
@@ -74,6 +75,13 @@ footer {
     display: flex;
     justify-content: center;
     flex-direction: row;
+    flex-shrink: 1;
+    min-height: 15%;
+    margin-bottom: 0px;
+    width: 100%
+}
+.push {
+    min-height: 10%;
 }
 
 .content {
@@ -130,6 +138,7 @@ footer {
     padding-left: 20px;
     height: 100%;
     width: 97%;
+    margin: auto;
 }
 .thumbnailbox {
     display: flex;
@@ -159,8 +168,7 @@ button.dropdown {
     border: none;
     outline: none;
     transition: 1s;
-    font-size: 18px;
-
+    margin-bottom: 10px;;
 }
 button.dropdown.active, button.dropdown:hover {
     background-color: #7DDF92;
@@ -171,13 +179,26 @@ div.dropcontent {
     color: #36603F;
     display: none;
     width: 97.5%;
+    font-size: 14px;
+    margin-bottom: 10px;
+    
 }
+.education, .experience {
+    padding: 20px;
+}
+
 .socialbox {
     margin-left: 20%;
  
 }
+.socialicon {
+    width: 20%;
+    border: 0;
+    padding-top: 10px;
+    margin-top: 10px;
+}
 .foottext {
-    margin-left: 30%;
+    margin-left: 33%;
 }
 
 button.download {
